<resources>
    <string name="app_name">ResistorApp</string>
    <string name="_0">0</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="resistor_app">Resistor-App:</string>
    <string name="bandnumber">BandNumber:</string>
    <string name="_15">1.</string>
    <string name="_25">2.</string>
    <string name="_35">3.</string>
    <string name="band_color">Band-Color:</string>
    <string name="white">White</string>
    <string name="reset">Reset</string>
    <string name="calculate">Calculate</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="yellow">Yellow</string>
    <string name="gray">Gray</string>
    <string name="todo">TODO</string>
</resources>